--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "universal-redux-template",
-  "version": "0.0.0",
+  "name": "twx",
+  "version": "1.0.0",
   "description": "Universal Redux Template",
   "scripts": {
     "lint": "eslint app bin",
@@ -15,8 +15,8 @@
     "postinstall": "npm run build"
   },
   "engines": {
-    "node": "6.1.0",
-    "npm": "3.8.6"
+    "node": "8.10.0",
+    "npm": "5.5.1"
   },
   "repository": {
     "type": "git",
@@ -46,13 +46,13 @@
     "gulp-rev": "^6.0.1",
     "gulp-rev-all": "^0.8.24",
     "gulp-rev-replace": "^0.4.3",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^3.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "history": "^1.17.0",
     "humps": "^0.6.0",
     "immutable": "^3.8.1",
     "lodash": "^3.10.1",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.1.0",
     "normalizr": "^1.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
@@ -78,13 +78,11 @@
     "chokidar": "^1.6.1",
     "dotenv": "^4.0.0",
     "enzyme": "^2.3.0",
-    "eslint": "^3.18.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^6.0.0",
     "jsdom": "^7.0.1",
     "md5-file": "^3.1.1",
     "mocha": "^2.4.5",
     "nock": "^2.17.0",
+    "nodemon": "^1.17.2",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "rewire-webpack": "^1.0.0",
