--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "assets-webpack-plugin": "^3.2.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.3.14",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.5.1",
@@ -67,12 +67,17 @@
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.2",
     "superagent": "^1.4.0",
+    "swiper": "^4.0.3",
     "webpack": "^2.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-rewire": "^1.0.0-beta-5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-react-hmre": "^1.0.1",
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
     "chokidar": "^1.6.1",
@@ -89,6 +94,7 @@
     "sinon": "^1.17.1",
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
